# kopsi-200-pcap-parser

./: CHALLENGE.MD  Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
src/packet/: Cargo.toml
src/packet/src/: lib.rs  models.rs
tests/: integration_tests.rs
tests/common/: mod.rs
