[package]
name = "kopsi-200-pcap-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
packet = {path = "src/packet"}
chrono = "0.4.38"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[profile.release]
debug = true
codegen-units = 1
lto = "fat"